--- a/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
+++ b/07-Errors and Exception Handling/02-Errors and Exceptions Homework.ipynb
@@ -127,35 +127,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "def ask():\n",
-    "    while Tru\n",
-    "    try:\n",
-    "        val = int(input(\"Input an integer: \"))\n",
-    "    except:\n",
-    "        print(\"An error occurred! Please try again!\")\n",
-    "        continue\n",
-    "    else:\n",
-    "        print(f\"Thank you, your number squared is: {val**2}\")\n",
-    "        break"
+    "    while True:\n",
+    "        try:\n",
+    "            val = int(input(\"Input an integer: \"))\n",
+    "        except:\n",
+    "            print(\"An error occurred! Please try again!\")\n",
+    "            continue\n",
+    "        else:\n",
+    "            print(f\"Thank you, your number squared is: {val**2}\")\n",
+    "            break"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input an integer: null\n",
+      "Input an integer: \n",
       "An error occurred! Please try again!\n",
-      "Input an integer: 2\n",
-      "Thank you, your number squared is:  4\n"
+      "Input an integer: 4\n",
+      "Thank you, your number squared is: 16\n"
      ]
     }
    ],
