--- a/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
+++ b/08-Milestone Project - 2/02-Milestone Project 2 - Walkthrough Steps Workbook.ipynb
@@ -54,15 +54,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
-    "suits = pass\n",
-    "ranks = pass\n",
-    "values = pass\n",
+    "suits = ('Hearts', 'Diamonds', 'Spades', 'Clubs')\n",
+    "ranks = ('Two', 'Three', 'Four', 'Five', 'Six', 'Seven', 'Eight', 'Nine', 'Ten', 'Jack', 'Queen', 'King', 'Ace')\n",
+    "values = {'Two':2, 'Three':3, 'Four':4, 'Five':5, 'Six':6, 'Seven':7, 'Eight':8, 'Nine':9, 'Ten':10, 'Jack':10,\n",
+    "         'Queen':10, 'King':10, 'Ace':11}\n",
     "\n",
     "playing = True"
    ]
@@ -85,17 +86,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Card:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        pass\n",
+    "    def __init__(self, suit, rank):\n",
+    "        self.suit = suit\n",
+    "        self.rank = rank\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass"
+    "        return self.rank+\" of \"+self.suit"
    ]
   },
   {
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,16 +126,20 @@
     "        self.deck = []  # start with an empty list\n",
     "        for suit in suits:\n",
     "            for rank in ranks:\n",
-    "                pass\n",
+    "                card = Card(suit, rank)\n",
+    "                self.deck.append(card)\n",
     "    \n",
     "    def __str__(self):\n",
-    "        pass\n",
+    "        string = \"Deck composition:\\n\"\n",
+    "        for card in self.deck:\n",
+    "            string += str(card)+\"\\n\"\n",
+    "        return string\n",
     "\n",
     "    def shuffle(self):\n",
     "        random.shuffle(self.deck)\n",
     "        \n",
     "    def deal(self):\n",
-    "        pass"
+    "        return self.deck.pop() "
    ]
   },
   {
@@ -148,10 +154,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "test_deck = Deck()\n",
-    "print(test_deck)"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -170,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -181,10 +184,15 @@
     "        self.aces = 0    # add an attribute to keep track of aces\n",
     "    \n",
     "    def add_card(self,card):\n",
-    "        pass\n",
-    "    \n",
+    "        self.cards.append(card)\n",
+    "        self.value += values[card.rank] \n",
+    "        if card.rank == \"Ace\":\n",
+    "            self.aces += 1\n",
+    "            \n",
     "    def adjust_for_ace(self):\n",
-    "        pass"
+    "        while self.value > 21 and self.aces:\n",
+    "            self.value -= 10\n",
+    "            self.aces -= 1"
    ]
   },
   {
@@ -197,21 +205,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Chips:\n",
     "    \n",
-    "    def __init__(self):\n",
-    "        self.total = 100  # This can be set to a default value or supplied by a user input\n",
+    "    def __init__(self, total=100):\n",
+    "        self.total = total  # This can be set to a default value or supplied by a user input\n",
     "        self.bet = 0\n",
     "        \n",
     "    def win_bet(self):\n",
-    "        pass\n",
+    "        self.total += self.bet\n",
     "    \n",
     "    def lose_bet(self):\n",
-    "        pass"
+    "        self.total -= self.bet"
    ]
   },
   {
@@ -232,13 +240,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def take_bet():\n",
-    "    \n",
-    "    pass"
+    "def take_bet(chips):\n",
+    "    while True:\n",
+    "        try:\n",
+    "            chips.bet = int(input(\"How many chips would you like to bet? \"))\n",
+    "        except ValueError:\n",
+    "            print(\"Sorry, a bet must be an integer.\")\n",
+    "        else:\n",
+    "            if chips.bet > chips.total:\n",
+    "                print(f\"Sorry, you bet can not exeed {chips.total}\")\n",
+    "            else:\n",
+    "                break"
    ]
   },
   {
@@ -251,13 +267,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hit(deck,hand):\n",
-    "    \n",
-    "    pass"
+    "    card = deck.deal()\n",
+    "    hand.add_card(card)\n",
+    "    hand.adjust_for_ace()"
    ]
   },
   {
@@ -271,14 +288,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def hit_or_stand(deck,hand):\n",
     "    global playing  # to control an upcoming while loop\n",
     "    \n",
-    "    pass"
+    "    while True:\n",
+    "        x = input(\"Hit or Stand? Enter h or s: \")\n",
+    "        if x[0].lower() == \"h\":\n",
+    "            hit(deck, hand)\n",
+    "            \n",
+    "        elif x[0].lower() == \"s\":\n",
+    "            print(\"Player stands, it's the Dealer turn!\")\n",
+    "            playing = False\n",
+    "            \n",
+    "        else:\n",
+    "            input(\"Wrong choise\")\n",
+    "            continue\n",
+    "        \n",
+    "        break"
    ]
   },
   {
@@ -291,17 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def show_some(player,dealer):\n",
-    "    \n",
-    "    pass\n",
+    "    print(\"\\nDealer's Hand:\")\n",
+    "    print(\" <card hidden>\")\n",
+    "    print('',dealer.cards[1])  \n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
     "    \n",
     "def show_all(player,dealer):\n",
-    "    \n",
-    "    pass"
+    "    print(\"\\nDealer's Hand:\", *dealer.cards, sep='\\n ')\n",
+    "    print(\"Dealer's Hand =\",dealer.value)\n",
+    "    print(\"\\nPlayer's Hand:\", *player.cards, sep='\\n ')\n",
+    "    print(\"Player's Hand =\",player.value)"
    ]
   },
   {
@@ -314,24 +348,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def player_busts():\n",
-    "    pass\n",
+    "def player_busts(player, dealer, chips):\n",
+    "    print(\"BUST PLAYER!\")\n",
+    "    chips.lose_bet()\n",
     "\n",
-    "def player_wins():\n",
-    "    pass\n",
+    "def player_wins(player, dealer, chips):\n",
+    "    print(\"PLAYER WINS!\")\n",
+    "    chips.win_bet()\n",
     "\n",
-    "def dealer_busts():\n",
-    "    pass\n",
+    "def dealer_busts(player, dealer, chips):\n",
+    "    print(\"PLAYER WINS, BUST DEALER!\")\n",
+    "    chips.win_bet()\n",
     "    \n",
-    "def dealer_wins():\n",
-    "    pass\n",
+    "def dealer_wins(player, dealer, chips):\n",
+    "    print(\"DEALER WINS!\")\n",
+    "    chips.lose_bet()\n",
     "    \n",
-    "def push():\n",
-    "    pass"
+    "def push(player, dealer, chips):\n",
+    "    print(\"Dealer and player tie! PUSH\")"
    ]
   },
   {
@@ -343,52 +381,188 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WELCOME TO BLACK JACK\n",
+      "How many chips would you like to bet? 20\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Seven of Diamonds\n",
+      "\n",
+      "Player's Hand:\n",
+      " Seven of Hearts\n",
+      " Queen of Clubs\n",
+      "Hit or Stand? Enter h or s: s\n",
+      "Player stands, it's the Dealer turn!\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Seven of Diamonds\n",
+      "\n",
+      "Player's Hand:\n",
+      " Seven of Hearts\n",
+      " Queen of Clubs\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " King of Hearts\n",
+      " Seven of Diamonds\n",
+      "Dealer's Hand = 17\n",
+      "\n",
+      "Player's Hand:\n",
+      " Seven of Hearts\n",
+      " Queen of Clubs\n",
+      "Player's Hand = 17\n",
+      "Dealer and player tie! PUSH\n",
+      "\n",
+      " Player total chips are at: 100 \n",
+      "Would you like to play another game? y/n: y\n",
+      "WELCOME TO BLACK JACK\n",
+      "How many chips would you like to bet? 30\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Six of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ten of Clubs\n",
+      " Three of Spades\n",
+      "Hit or Stand? Enter h or s: h\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Six of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ten of Clubs\n",
+      " Three of Spades\n",
+      " Eight of Hearts\n",
+      "Hit or Stand? Enter h or s: s\n",
+      "Player stands, it's the Dealer turn!\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Six of Clubs\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ten of Clubs\n",
+      " Three of Spades\n",
+      " Eight of Hearts\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " Nine of Diamonds\n",
+      " Six of Clubs\n",
+      " Ten of Diamonds\n",
+      "Dealer's Hand = 25\n",
+      "\n",
+      "Player's Hand:\n",
+      " Ten of Clubs\n",
+      " Three of Spades\n",
+      " Eight of Hearts\n",
+      "Player's Hand = 21\n",
+      "PLAYER WINS, BUST DEALER!\n",
+      "\n",
+      " Player total chips are at: 130 \n",
+      "Would you like to play another game? y/n: y\n",
+      "WELCOME TO BLACK JACK\n",
+      "How many chips would you like to bet? 100\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Ten of Diamonds\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Clubs\n",
+      " Queen of Spades\n",
+      "Hit or Stand? Enter h or s: h\n",
+      "\n",
+      "Dealer's Hand:\n",
+      " <card hidden>\n",
+      " Ten of Diamonds\n",
+      "\n",
+      "Player's Hand:\n",
+      " Six of Clubs\n",
+      " Queen of Spades\n",
+      " Six of Diamonds\n",
+      "BUST PLAYER!\n",
+      "\n",
+      " Player total chips are at: 0 \n",
+      "Would you like to play another game? y/n: n\n",
+      "Thank you for playing\n"
+     ]
+    }
+   ],
    "source": [
     "while True:\n",
     "    # Print an opening statement\n",
-    "\n",
+    "    print(\"WELCOME TO BLACK JACK\")\n",
     "    \n",
     "    # Create & shuffle the deck, deal two cards to each player\n",
-    "\n",
+    "    deck = Deck()\n",
+    "    deck.shuffle()\n",
     "    \n",
-    "        \n",
+    "    hand_player = Hand()\n",
+    "    hit(deck, hand_player)\n",
+    "    hit(deck, hand_player)\n",
+    "    \n",
+    "    hand_dealer = Hand()\n",
+    "    hit(deck, hand_dealer)\n",
+    "    hit(deck, hand_dealer)\n",
+    "    \n",
     "    # Set up the Player's chips\n",
-    "    \n",
+    "    chips_player = Chips()\n",
     "    \n",
     "    # Prompt the Player for their bet\n",
-    "\n",
+    "    take_bet(chips_player)\n",
     "    \n",
     "    # Show cards (but keep one dealer card hidden)\n",
-    "\n",
+    "    show_some(hand_player, hand_dealer)\n",
     "    \n",
     "    while playing:  # recall this variable from our hit_or_stand function\n",
     "        \n",
     "        # Prompt for Player to Hit or Stand\n",
-    "        \n",
+    "        hit_or_stand(deck, hand_player)\n",
     "        \n",
     "        # Show cards (but keep one dealer card hidden)\n",
-    " \n",
+    "        show_some(hand_player, hand_dealer)\n",
     "        \n",
     "        # If player's hand exceeds 21, run player_busts() and break out of loop\n",
-    "        \n",
-    "\n",
+    "        if hand_player.value > 21:\n",
+    "            player_busts(hand_player, hand_dealer, chips_player)\n",
     "            break\n",
     "\n",
     "    # If Player hasn't busted, play Dealer's hand until Dealer reaches 17\n",
-    "    \n",
-    "    \n",
+    "    if hand_player.value <= 21:\n",
+    "        while hand_dealer.value < hand_player.value:\n",
+    "            hit(deck, hand_dealer)\n",
+    "\n",
     "        # Show all cards\n",
-    "    \n",
-    "        # Run different winning scenarios\n",
+    "        show_all(hand_player, hand_dealer)\n",
     "        \n",
+    "        # Run different winning scenarios\n",
+    "        if hand_dealer.value > 21:\n",
+    "            dealer_busts(hand_player, hand_dealer, chips_player)\n",
+    "        elif hand_dealer.value > hand_player.value:\n",
+    "            dealer_wins(hand_player, hand_dealer, chips_player)\n",
+    "        elif hand_dealer.value < hand_player.value:\n",
+    "            player_wins(hand_player, hand_dealer, chips_player)\n",
+    "        else:\n",
+    "            push(hand_player, hand_dealer, chips_player)\n",
     "    \n",
     "    # Inform Player of their chips total \n",
-    "    \n",
+    "    print(f\"\\n Player total chips are at: {chips_player.total} \")\n",
     "    # Ask to play again\n",
-    "\n",
+    "    new_game = input(\"Would you like to play another game? y/n: \")\n",
+    "    if new_game[0].lower() == \"y\":\n",
+    "        playing = True\n",
+    "        continue\n",
+    "    else:\n",
+    "        print(\"Thank you for playing\")\n",
     "        break"
    ]
   },
@@ -417,7 +591,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
