Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -31,9 +31,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Numbers:\n",
+    "Numbers: objets essentiellement de 2 types : integer et float\n",
     "\n",
-    "Strings:\n",
+    "Strings: objets composés de listes de caractères indexables mais non imutable (on ne peut pas remplacer un caractère par un autre directement une fois déclarés\n",
     "\n",
     "Lists:\n",
     "\n",
