Update 09-Objects and Data Structures Assessment Test.ipynb

--- a/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
+++ b/00-Python Object and Data Structure Basics/09-Objects and Data Structures Assessment Test.ipynb
@@ -33,13 +33,13 @@
    "source": [
     "Numbers: objets essentiellement de 2 types : integer et float\n",
     "\n",
-    "Strings: objets composés de listes de caractères indexables mais non imutable (on ne peut pas remplacer un caractère par un autre directement une fois déclarés\n",
+    "Strings: objets composés de listes de caractères indexables mais non imutable (on ne peut pas remplacer un caractère par un autre directement une fois déclarés. Se déclare à l'intérieur de guillemets simples ou doubles selon le souhait ou qu'il y a des guillements simple à l'intérieur de la chaine de caractère\n",
     "\n",
-    "Lists:\n",
+    "Lists: objets composés d'ensemble d'éléments de types différents, imbricables et qui se déclare à l'intérieur de crochets. Comme les string ils sont indexables mais mutables (on peut réassigner un élément de la liste) \n",
     "\n",
-    "Tuples:\n",
+    "Tuples: collection d'éléments de types différents, indexables, non ordonnables ? (ne suis plus sure)\n",
     "\n",
-    "Dictionaries:\n"
+    "Dictionaries: collection d'éléments indexables à partir de mots clés, qui se déclarent avec des accolades et dont les mot clés sont obligatoirement des chaines de caractère. Les valeurs peuvent être de types différents\n"
    ]
   },
   {
