Add 'and' statement to first answer
's' is not a word, therefore adding an 'and' statement to 
for firstLetter in st.split():
    if firstLetter[0] == "s" and len(firstLetter) > 1:
        print (firstLetter)
would make this more correct

--- a/02-Python Statements/08-Statements Assessment Test - Solutions.ipynb
+++ b/02-Python Statements/08-Statements Assessment Test - Solutions.ipynb
@@ -43,7 +43,7 @@
    ],
    "source": [
     "for word in st.split():\n",
-    "    if word[0] == 's':\n",
+    "    if word[0] == 's' and len(word) > 1:\n",
     "        print(word)"
    ]
   },
