add note for dict in Python 3.7 ordered by default

--- a/13-Advanced Python Modules/01-Collections Module.ipynb
+++ b/13-Advanced Python Modules/01-Collections Module.ipynb
@@ -392,6 +392,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Note:** As of Python 3.7, dictionaries are now ordered by key insertion by default, as [explained in the official Python documentation — What’s New In Python 3.7](https://docs.python.org/3/whatsnew/3.7.html)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Equality with an Ordered Dictionary\n",
     "A regular dict looks at its contents when testing for equality. An OrderedDict also considers the order the items were added.\n",
     "\n",
